fixed a bug, added the player

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>movingSquare</title>
 	<script src="socket.io/socket.io.js"></script>
+	<style>
+		html, body, canvas{
+			margin: 0
+		}
+	</style>
 </head>
 <body>
 	<canvas></canvas>
